* Crypto cleanup from Dave Mills.
(4.2.5p166) 2009/04/25 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1165] Clean up small memory leaks in the  config file parser
* Correct logconfig keyword declaration to MULTIPLE_ARG
* Enable filename and line number leak reporting on Windows when built
  DEBUG for all the typical C runtime allocators such as calloc,
  malloc, and strdup.  Previously only emalloc calls were covered.
* Add DEBUG-only code to free dynamically allocated memory that would
  otherwise remain allocated at ntpd exit, to allow less forgivable
  leaks to stand out in leaks reported after exit.
* Ensure termination of strings in ports/winnt/libisc/isc_strerror.c
  and quiet compiler warnings.
* [Bug 1057] ntpdc unconfig failure
* [Bug 1161] unpeer AKA unconfig command for ntpq :config
* PPS and crypto cleanup in ntp_proto.c from Dave Mills.
(4.2.5p165) 2009/04/23 Released by Harlan Stenn <stenn@ntp.org>
* WWVB refclock cleanup from Dave Mills.
* Code cleanup: requested_key -> request_key.
* [Bug 833] ignore whitespace at end of remote configuration lines
* [Bug 1033] ntpdc/ntpq crash prompting for keyid on Windows
* [Bug 1154] mDNS registration should be done later, repeatedly and only
  if asked for.
* [Bug 1028] Support for W32Time authentication via Samba.
* quiet ntp_parser.c malloc redeclaration warning
* Mitigation and PPS/PPSAPI cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* timepps-Solaris.h patches from Dave Hart.
(4.2.5p164) 2009/04/22 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC3)
* PPS/PPSAPI cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* [Bug 1125] C runtime per-thread initialization on Windows
* [Bug 1152] temporarily disable refclock_parse, refclock_true until
  maintainers can repair build break from pps_sample()
* [Bug 1153] refclock_nmea should not mix UTC with GPS time
* [Bug 1159] ntpq overlap diagnostic message test buggy